layout.css
#layout {
	display: grid;
    grid-template-columns: repeat(5, 1fr);
    grid-template-rows: repeat(14, 1fr);
}

#layout p {
    margin: auto;
    text-align: center;
    vertical-align: middle;
    font-family: serif;
    font-weight: bold;
    color: white;
}

#bet-layout {
    display: grid;
    grid-template-columns: calc(4fr/5) repeat(3, calc(2fr/5) calc(3fr/5)) calc(2fr/5) calc(4fr/5);
    grid-template-rows: calc(4fr/5) repeat(12, calc(2fr/5) calc(3fr/5)) calc(2fr/5) calc(4fr/5);
}

@media only screen and (min-width: 576px){
    #layout {
        grid-template-columns: repeat(14, 1fr);
        grid-template-rows: repeat(5, 1fr);
    }

    #layout p {
		transform: rotate(-90deg);
	}

    #bet-layout {
        grid-template-columns: calc(4fr/5) repeat(12, calc(2fr/5) calc(3fr/5)) calc(2fr/5) calc(4fr/5);
        grid-template-rows: repeat(3, calc(2fr/5) calc(3fr/5)) calc(2fr/5) calc(4fr/5) 1fr;
        transform: translateY(-1vw);
    }
}

#carpet-1-1 {
	grid-row: 2;
	grid-column: 2;
}
#carpet-1-2 {
	grid-row: 2;
	grid-column: 3;
}
#carpet-1-3 {
	grid-row: 2;
	grid-column: 4;
}
#carpet-2-1 {
	grid-row: 3;
	grid-column: 2;
}
#carpet-2-2 {
	grid-row: 3;
	grid-column: 3;
}
#carpet-2-3 {
	grid-row: 3;
	grid-column: 4;
}
#carpet-3-1 {
	grid-row: 4;
	grid-column: 2;
}
#carpet-3-2 {
	grid-row: 4;
	grid-column: 3;
}
#carpet-3-3 {
	grid-row: 4;
	grid-column: 4;
}
#carpet-4-1 {
	grid-row: 5;
	grid-column: 2;
}
#carpet-4-2 {
	grid-row: 5;
	grid-column: 3;
}
#carpet-4-3 {
	grid-row: 5;
	grid-column: 4;
}
#carpet-5-1 {
	grid-row: 6;
	grid-column: 2;
}
#carpet-5-2 {
	grid-row: 6;
	grid-column: 3;
}
#carpet-5-3 {
	grid-row: 6;
	grid-column: 4;
}
#carpet-6-1 {
	grid-row: 7;
	grid-column: 2;
}
#carpet-6-2 {
	grid-row: 7;
	grid-column: 3;
}
#carpet-6-3 {
	grid-row: 7;
	grid-column: 4;
}
#carpet-7-1 {
	grid-row: 8;
	grid-column: 2;
}
#carpet-7-2 {
	grid-row: 8;
	grid-column: 3;
}
#carpet-7-3 {
	grid-row: 8;
	grid-column: 4;
}
#carpet-8-1 {
	grid-row: 9;
	grid-column: 2;
}
#carpet-8-2 {
	grid-row: 9;
	grid-column: 3;
}
#carpet-8-3 {
	grid-row: 9;
	grid-column: 4;
}
#carpet-9-1 {
	grid-row: 10;
	grid-column: 2;
}
#carpet-9-2 {
	grid-row: 10;
	grid-column: 3;
}
#carpet-9-3 {
	grid-row: 10;
	grid-column: 4;
}
#carpet-10-1 {
	grid-row: 11;
	grid-column: 2;
}
#carpet-10-2 {
	grid-row: 11;
	grid-column: 3;
}
#carpet-10-3 {
	grid-row: 11;
	grid-column: 4;
}
#carpet-11-1 {
	grid-row: 12;
	grid-column: 2;
}
#carpet-11-2 {
	grid-row: 12;
	grid-column: 3;
}
#carpet-11-3 {
	grid-row: 12;
	grid-column: 4;
}
#carpet-12-1 {
	grid-row: 13;
	grid-column: 2;
}
#carpet-12-2 {
	grid-row: 13;
	grid-column: 3;
}
#carpet-12-3 {
	grid-row: 13;
	grid-column: 4;
}
#carpet-13-1 {
	grid-row: 14;
	grid-column: 2;
}
#carpet-13-2 {
	grid-row: 14;
	grid-column: 3;
}
#carpet-13-3 {
	grid-row: 14;
	grid-column: 4;
}

#carpet-zero {
    grid-row: 1;
    grid-column: 2 / 5;
    display: flex;
}
#carpet-zero * {
    flex: 1;
}
#carpet-low {
    grid-row: 2 / 6;
    grid-column: 1;
}
#carpet-high {
    grid-row: 2 / 6;
    grid-column: 5;
}
#carpet-even {
    grid-row: 6 / 10;
    grid-column: 1;
}
#carpet-odd {
    grid-row: 6 / 10;
    grid-column: 5;
}
#carpet-red {
    grid-row: 10 / 14;
    grid-column: 1;
}
#carpet-black {
    grid-row: 10 / 14;
    grid-column: 5;
}

#betgrid-1-1 {
	grid-row: 2;
	grid-column: 2;
}
#betgrid-1-2 {
	grid-row: 2;
	grid-column: 3;
}
#betgrid-1-3 {
	grid-row: 2;
	grid-column: 4;
}
#betgrid-1-4 {
	grid-row: 2;
	grid-column: 5;
}
#betgrid-1-5 {
	grid-row: 2;
	grid-column: 6;
}
#betgrid-1-6 {
	grid-row: 2;
	grid-column: 7;
}
#betgrid-1-7 {
	grid-row: 2;
	grid-column: 8;
}
#betgrid-2-1 {
	grid-row: 3;
	grid-column: 2;
}
#betgrid-2-2 {
	grid-row: 3;
	grid-column: 3;
}
#betgrid-2-3 {
	grid-row: 3;
	grid-column: 4;
}
#betgrid-2-4 {
	grid-row: 3;
	grid-column: 5;
}
#betgrid-2-5 {
	grid-row: 3;
	grid-column: 6;
}
#betgrid-2-6 {
	grid-row: 3;
	grid-column: 7;
}
#betgrid-2-7 {
	grid-row: 3;
	grid-column: 8;
}
#betgrid-3-1 {
	grid-row: 4;
	grid-column: 2;
}
#betgrid-3-2 {
	grid-row: 4;
	grid-column: 3;
}
#betgrid-3-3 {
	grid-row: 4;
	grid-column: 4;
}
#betgrid-3-4 {
	grid-row: 4;
	grid-column: 5;
}
#betgrid-3-5 {
	grid-row: 4;
	grid-column: 6;
}
#betgrid-3-6 {
	grid-row: 4;
	grid-column: 7;
}
#betgrid-3-7 {
	grid-row: 4;
	grid-column: 8;
}
#betgrid-4-1 {
	grid-row: 5;
	grid-column: 2;
}
#betgrid-4-2 {
	grid-row: 5;
	grid-column: 3;
}
#betgrid-4-3 {
	grid-row: 5;
	grid-column: 4;
}
#betgrid-4-4 {
	grid-row: 5;
	grid-column: 5;
}
#betgrid-4-5 {
	grid-row: 5;
	grid-column: 6;
}
#betgrid-4-6 {
	grid-row: 5;
	grid-column: 7;
}
#betgrid-4-7 {
	grid-row: 5;
	grid-column: 8;
}
#betgrid-5-1 {
	grid-row: 6;
	grid-column: 2;
}
#betgrid-5-2 {
	grid-row: 6;
	grid-column: 3;
}
#betgrid-5-3 {
	grid-row: 6;
	grid-column: 4;
}
#betgrid-5-4 {
	grid-row: 6;
	grid-column: 5;
}
#betgrid-5-5 {
	grid-row: 6;
	grid-column: 6;
}
#betgrid-5-6 {
	grid-row: 6;
	grid-column: 7;
}
#betgrid-5-7 {
	grid-row: 6;
	grid-column: 8;
}
#betgrid-6-1 {
	grid-row: 7;
	grid-column: 2;
}
#betgrid-6-2 {
	grid-row: 7;
	grid-column: 3;
}
#betgrid-6-3 {
	grid-row: 7;
	grid-column: 4;
}
#betgrid-6-4 {
	grid-row: 7;
	grid-column: 5;
}
#betgrid-6-5 {
	grid-row: 7;
	grid-column: 6;
}
#betgrid-6-6 {
	grid-row: 7;
	grid-column: 7;
}
#betgrid-6-7 {
	grid-row: 7;
	grid-column: 8;
}
#betgrid-7-1 {
	grid-row: 8;
	grid-column: 2;
}
#betgrid-7-2 {
	grid-row: 8;
	grid-column: 3;
}
#betgrid-7-3 {
	grid-row: 8;
	grid-column: 4;
}
#betgrid-7-4 {
	grid-row: 8;
	grid-column: 5;
}
#betgrid-7-5 {
	grid-row: 8;
	grid-column: 6;
}
#betgrid-7-6 {
	grid-row: 8;
	grid-column: 7;
}
#betgrid-7-7 {
	grid-row: 8;
	grid-column: 8;
}
#betgrid-8-1 {
	grid-row: 9;
	grid-column: 2;
}
#betgrid-8-2 {
	grid-row: 9;
	grid-column: 3;
}
#betgrid-8-3 {
	grid-row: 9;
	grid-column: 4;
}
#betgrid-8-4 {
	grid-row: 9;
	grid-column: 5;
}
#betgrid-8-5 {
	grid-row: 9;
	grid-column: 6;
}
#betgrid-8-6 {
	grid-row: 9;
	grid-column: 7;
}
#betgrid-8-7 {
	grid-row: 9;
	grid-column: 8;
}
/* ... */

